[package]
authors = ["Steve Cook <steve@snarkout.org>"]
categories = ["command-line-utilities"]
description = "meowpad is a command-line, web-aware notepad"
homepage = "https://github.com/snark/meowpad"
keywords = [
    "notes",
    "scratchpad",
    "tool",
]
license = "MIT"
name = "meowpad"
readme = "README.md"
repository = "https://github.com/snark/meowpad"
version = "0.1.0"
edition= "2021"
rust-version = "1.84.0"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
comfy-table = "7.1.4"
dom_smoothie = "0.4.0"
edit = "0.1.5"
env_home = "0.1.0"
jiff = { version = "0.1.25", features = ["serde"] }
platform-dirs = "0.3.0"
rusqlite = { version = "*", features = ["bundled", "time", "uuid", "url"] }
rusqlite_migration = "1.3.1"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
ureq = "3.0.2"
url = "2.5.4"
uuid = { version = "1.12.1", features = ["v7", "serde"] }

[profile.release]
codegen-units = 1
lto = true
strip = true

